added wind power graph